# server/docs/swagger.yaml
@@ -302,6 +302,23 @@ definitions:
     - voucherAndCard
     - balanceAndCard
     - voucherAndBalanceAndCard
+  models.AuditLog:
+    properties:
+      id:
+        type: integer
+      method:
+        type: string
+      status_code:
+        type: integer
+      success:
+        type: boolean
+      timestamp:
+        type: string
+      url:
+        type: string
+      user_id:
+        type: string
+    type: object
   models.Card:
     properties:
       brand:
@@ -1918,6 +1935,37 @@ paths:
       summary: Send code to forget password email for verification
       tags:
       - User
+  /user/log:
+    get:
+      consumes:
+      - application/json
+      description: List user's logs
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/models.AuditLog'
+            type: array
+        "400":
+          description: Bad Request
+          schema: {}
+        "401":
+          description: Unauthorized
+          schema: {}
+        "404":
+          description: Not Found
+          schema: {}
+        "500":
+          description: Internal Server Error
+          schema: {}
+      security:
+      - BearerAuth: []
+      summary: List user's logs
+      tags:
+      - Audit
   /user/refresh_token:
     post:
       consumes:
